--- a/local.properties
+++ b/local.properties
@@ -2,7 +2,7 @@
 
 # Directory to deploy to
 # /opt/tomcat/webapps
-deploy.dir=C:\\Program Files\\Apache Software Foundation\\Tomcat 5.5\\webapps
+deploy.dir=C:\\Program Files\\Apache Software Foundation\\Tomcat 7.0\\webapps
 
 # The application being tested
 zap.target=http://localhost:8080/
@@ -12,6 +12,7 @@ zap.addr=localhost
 # The ZAP port
 zap.port=8090
 # The ZAP home directory
-zap.dir=C:\\Program Files\\OWASP\\Zed Attack Proxy
+# zap.dir=C:\\Program Files\\OWASP\\Zed Attack Proxy
+zap.dir=C:\\Program Files (x86)\\OWASP\\Zed Attack Proxy
 # The default ZAP session name
 zap.session=zap.session
