--- a/build.xml
+++ b/build.xml
@@ -98,10 +98,7 @@
         		<fileset dir="lib">
         			<include name="*.jar" />
         		</fileset>
-        		<fileset dir="build/WEB-INF/classes">
-        			<include name="*.class" />
-        		</fileset>
-        		<pathelement location="build/WEB-INF/classes"/>
+        		<pathelement location="bin"/>
             </classpath>
             <formatter type="plain"/>
             <formatter type="xml"/>
