Updated to use classes from bin rather than the WEB-INF directory for tests as well as zap-test

--- a/build.xml
+++ b/build.xml
@@ -60,7 +60,7 @@
         		<fileset dir="lib">
         			<include name="*.jar" />
         		</fileset>
-        		<pathelement location="build/WEB-INF/classes"/>
+        		<pathelement location="bin"/>
             </classpath>
             <formatter type="plain"/>
             <formatter type="xml"/>
