Updated selenium jar and tweaked build files

--- a/build.xml
+++ b/build.xml
@@ -96,7 +96,8 @@
         			<include name="*.jar" />
         		</fileset>
         		<fileset dir="lib">
-        			<include name="*.jar" />
+        			<!--include name="*.jar" /-->
+        			<include name="selenium-server-standalone-*.jar" />
         		</fileset>
         		<pathelement location="bin"/>
             </classpath>
